--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jessica-taetle-portfolio",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://jessicataetle.github.io",
   "description": "Jessica Taetle's personal portfolio website",
   "author": "Jessica Taetle",
   "dependencies": {
@@ -20,11 +21,16 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "gh-pages": "^6.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
