--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,34 @@
-.DS_Store
+# Dependencies
 node_modules/
-dist/
-# build/ - commented out so we can deploy
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# Testing
+coverage/
+
+# Production (don't ignore - we deploy from docs/)
+# docs/
+
+# Misc
+.DS_Store
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-coverage/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor
 .idea/
 .vscode/
 *.swp
 *.swo
 *~
+
+# Cache
 .cache/
+build/
 
