--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf docs && mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "git add docs -f && git commit -m 'Deploy' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
